WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304379
Just-dropped Mail Attachment title background is gray, make title hard to read
https://bugs.webkit.org/show_bug.cgi?id=304379
Summary
Just-dropped Mail Attachment title background is gray, make title hard to read
Gerald Squelart
Reported
2025-12-17 20:18:44 PST
Summary: When dragging & dropping a file into an email, the file title (filename) is in a gray bubble, which makes the text difficult to read, especially under Dark Appearance. Normally that background is either transparent, or blue (accent?) when selected. Steps To Reproduce: 1. Start a new email 2. Drag a pdf file from Finder into the email. Results: Attachment seems to be in a kind of selected state, but nothing can be done to it, and the highlight is gray (instead of blue for the usual selection). If the system appearance is "Dark", the title is pretty much unreadable. Thankfully, doing anything in the email window (clicking, selecting, etc.) removes this gray background. This didn't happen every time I tried, but maybe 80%.
rdar://132956951
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2025-12-17 20:23:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55606
EWS
Comment 2
2025-12-18 13:57:11 PST
Committed
304703@main
(cad1baf8d489): <
https://commits.webkit.org/304703@main
> Reviewed commits have been landed. Closing PR #55606 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug