Use better colors for selected legacy attachments in inactive windows https://bugs.webkit.org/show_bug.cgi?id=304379 rdar://132956951

Reviewed by Cameron McCormack.

The legacy attachment used hard-coded inactive-window colors, which made
the title text hard to read, especially in dark mode.
Instead we now use standard system colors, which match surrounding text
and adapt to the current system appearance.

No new tests, it's only changing colors.

* Source/WebCore/rendering/AttachmentLayout.mm:
(WebCore::titleTextColorForAttachment):
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::paintAttachmentTitleBackground):

Canonical link: https://commits.webkit.org/304703@main